--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ allprojects {
         maven {
             url "https://clojars.org/repo/"
         }
+        maven { url 'https://jitpack.io' }          // Repository for CallRecord Library
     }
 }
 
