--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name="com.orm.SugarApp"
-        tools:replace="android:icon">
+        tools:replace="android:icon"
         android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
